--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^2.44.0",
     "@uiw/react-codemirror": "^4.21.21",
     "@uiw/react-markdown-preview": "^5.0.3",
+    "firebase": "^10.7.1",
     "js-yaml": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
